changing company name in footer

--- a/enroll.html
+++ b/enroll.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/nav_footer.css">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/enroll.css">
 
     <title>Embassy</title>
 </head>
@@ -135,8 +135,83 @@
                   autocomplete="number"
                   placeholder="Your Phone Number"
                 />
+                <h1>ACADEMIC BACKGROUND</h1>
+              <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <h1>PARENT'S / SPONSOR's DETAILS</h1>
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />             
+ 
               </div>
-              <div class="Contact-input_textarea">
+              <!-- <div class="Contact-input_textarea">
                 <label for="message" class="-form-label font-weight-bold"
                   >Message</label
                 >
@@ -149,69 +224,127 @@
                   autocomplete="message"
                   placeholder="Type Something..."
                 ></textarea>
-              </div>
-              <div class="send_message">
+              </div> -->
+                <div class="send_message">
                 <button class="btn btn-outline-primary">Send Message</button>
               </div>
             </form>
           </div>
           <div class="contact-information">
-            <p class="contact-details">
-              <span class="label phone">
-                <i class="fas fa-phone-alt contact-i"></i>
-                Phone<br />
-                +977 - 01 - 2345676
-              </span>
-            </p>
-            <p class="contact-details">
-              <span class="label mphone">
-                <i class="fas fa-mobile-alt contact-i"></i>
-                Mobile<br />
-                +977 - 9876746574
-              </span>
-            </p>
-            <p class="contact-details">
-              <span class="label fax">
-                <i class="fas fa-fax fax contact-i"></i>
-                Fax<br />
-                +977 -01 - 9876765
-              </span>
-            </p>
-            <p class="contact-details">
-              <span class="label email">
-                <i class="fas fa-envelope contact-i"></i>
-                Email<br />
-                info@example.com
-              </span>
-            </p>
-            <p class="contact-details">
-              <span class="label address">
-                <i class="fas fa-map-marker-alt contact-i"></i>
-                Address<br />
-                Thamel, Kathmandu, Nepal
-              </span>
-            </p>
+            <div class="Contact-input_area">
+                <h1 class="english-profieiency-title">ENGLISH PROFICIENCY</h1>
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <select>
+                    <option>So many options</option>
+                    <option>...</option>
+                </select>
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                /> 
+                <h1>Further Study Plan </h1> 
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                /> 
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                /> 
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
+                <h1>DECLARATION & AGREEMENT</h1>
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <select>
+                    <option>So many options</option>
+                    <option>...</option>
+                </select>
+                <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <select>
+                    <option>So many options</option>
+                    <option>...</option>
+                </select>
+                <label for="name" class="-form-label font-weight-bold"
+                >Name</label
+              >
+              <input
+                id="date"
+                type="date"
+                class="@error('name') is-invalid @enderror"
+                name="name"
+                autocomplete="name"
+                placeholder="dd/mm/yy"
+                autofocus
+              />
+              <label for="name" class="-form-label font-weight-bold"
+                  >Name</label
+                >
+                <input
+                  id="name"
+                  type="text"
+                  class="@error('name') is-invalid @enderror"
+                  name="name"
+                  autocomplete="name"
+                  placeholder="Your Name"
+                  autofocus
+                />
 
-            <p class="contact-details">
-              <span class="label post-box">
-                <i class="fas fa-mail-bulk contact-i"></i>
-                P O Box<br />
-                25790, Kathmandu
-              </span>
-            </p>
+            </div>
           </div>
         </div>
       </div>
-    </section>
-    <section class="contact-banner">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2292.189865681508!2d151.2045263391035!3d-33.87348607922133!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae3c697ba0df%3A0xdf8c3e0e9d41767c!2sLumiere%20Residences%2C%2093%20Bathurst%20St%2C%20Sydney%20NSW%202000%2C%20Australia!5e0!3m2!1sen!2snp!4v1621926402398!5m2!1sen!2snp" 
-      width="100%"
-      height="450"
-      frameborder="0"
-      style="border: 0"
-      allowfullscreen=""
-      aria-hidden="false"
-      tabindex="0"></iframe>
     </section>
     <!-- Contact Form End -->
   </main>
