adding contact us form

--- a/service.html
+++ b/service.html
@@ -206,7 +206,7 @@
                 <h1 class="course-title" >English for Begginers</h1>
               <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
               <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button class="hero-join-now-button">Enroll Now</button>
+              <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
               </div>
               <div class="course-description">
                 <img src="./img/img4.jpg" alt="">
@@ -217,7 +217,7 @@
                 <h1 class="course-title" >English for Begginers</h1>
               <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
               <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button class="hero-join-now-button">Enroll Now</button>
+              <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
               </div>
               <div class="course-description">
                 <img src="./img/img4.jpg" alt="">
@@ -228,7 +228,7 @@
                 <h1 class="course-title" >English for Begginers</h1>
               <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
               <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button class="hero-join-now-button">Enroll Now</button>
+              <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
               </div>
               <div class="course-description">
                 <img src="./img/img4.jpg" alt="">
@@ -239,7 +239,7 @@
                 <h1 class="course-title" >English for Begginers</h1>
               <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
               <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button class="hero-join-now-button">Enroll Now</button>
+              <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
               </div>
               <div class="course-description">
                 <img src="./img/img4.jpg" alt="">
