adding Service panel into service page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="./serviceDetail.html"role="button" aria-expanded="false">
+              <a class="nav-link" href="./service.html"role="button" aria-expanded="false">
                 Our Services
               </a>
               <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
