--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="./serviceDetail.html"role="button" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="./service.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Our Services
               </a>
-              <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./service.html">Service 1</a></li>
-                <li><a class="dropdown-item" href="#">Service 2</a></li>
-              </ul> -->
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./serviceDetail.html">Migration</a></li>
+                <li><a class="dropdown-item" href="#">Visa 2</a></li>
+              </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
