--- a/serviceDetail.html
+++ b/serviceDetail.html
@@ -83,25 +83,30 @@
             <h2 class="text-center">Migration</h2>
           </div>
         </div>
-        <div class="container py-3">
-          <div class="card">
-            <div class="row ">
-              <div class="col-md-4 service-img">
-                  <img src="./img/gallery4.jpeg" class="w-100">
+        
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="service-box">
+                <div class="service-img">
+                  <img src="./img/gallery2.jpeg" class="img-responsive">
                 </div>
-                <div class="col-md-8 px-3">
-                  <div class="card-block px-3">
-                    <h4 class="card-title">Lorem ipsum dolor sit amet</h4>
-                    <p class="card-text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                    <p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                  </div>
+                <div class="service-content">
+                  <h3>Migration</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi, molestiae aliquid iusto, nisi consequatur maxime placeat esse nesciunt quibusdam nam nulla asperiores voluptates quam quia reiciendis quasi ratione ipsa!
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi, molestiae aliquid iusto, nisi consequatur maxime placeat esse nesciunt quibusdam nam nulla asperiores voluptates quam quia reiciendis quasi ratione ipsa!
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi, molestiae aliquid iusto, nisi consequatur maxime placeat esse nesciunt quibusdam nam nulla asperiores voluptates quam quia reiciendis quasi ratione ipsa!
+                  </p>
                 </div>
-      
               </div>
             </div>
           </div>
-      </div>
+        </div>
   </section>
   
   <footer>
