--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="./service.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Our Services
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
