--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 Our Services
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./service.html">Services</a></li>
                 <li><a class="dropdown-item" href="./serviceDetail.html">Migration</a></li>
               </ul>
             </li>
