adding contact us form

--- a/enroll.html
+++ b/enroll.html
@@ -137,7 +137,7 @@
                 />
                 <h1>ACADEMIC BACKGROUND</h1>
               <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Current Qualification</label
                 >
                 <input
                   id="name"
@@ -149,7 +149,7 @@
                   autofocus
                 />
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Which year was it completed?</label
                 >
                 <input
                   id="name"
@@ -157,11 +157,12 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Which year was it completed?"
                   autofocus
                 />
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Grade/Percentage/GPA *
+                  </label
                 >
                 <input
                   id="name"
@@ -169,11 +170,11 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Grade/Percentage/GPA"
                   autofocus
                 />
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Institution </label
                 >
                 <input
                   id="name"
@@ -181,12 +182,12 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Institution"
                   autofocus
                 />
                 <h1>PARENT'S / SPONSOR's DETAILS</h1>
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Name, Occupation, Email and Contact number</label
                 >
                 <input
                   id="name"
@@ -194,11 +195,11 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Name, Occupation, Email and Contact number"
                   autofocus
                 />
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Address</label
                 >
                 <input
                   id="name"
@@ -206,7 +207,7 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Address"
                   autofocus
                 />             
  
@@ -233,15 +234,19 @@
           <div class="contact-information">
             <div class="Contact-input_area">
                 <h1 class="english-profieiency-title">ENGLISH PROFICIENCY</h1>
-                <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                <label for="courses" class="english-proficiency-option"
+                  >Have you taken any of the following English standardized tests?</label
                 >
                 <select>
-                    <option>So many options</option>
-                    <option>...</option>
+                    <option>IELTS</option>
+                    <option>TOEFL</option>
+                    <option>PTE</option>
+                    <option>OET</option>
+                    <option>NONE</option>
+                   
                 </select>
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >If yes, what are your scores in Listening, Reading, Writing and Speaking?</label
                 >
                 <input
                   id="name"
@@ -249,11 +254,13 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="If yes, what are your scores in Listening, Reading, Writing and Speaking?
+                  "
                   autofocus
                 />
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >If no, when are you planning to take the test?
+                  </label
                 >
                 <input
                   id="name"
@@ -261,12 +268,13 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="If no, when are you planning to take the test?
+                  "
                   autofocus
                 /> 
                 <h1>Further Study Plan </h1> 
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Where do you intend to study? Name the country and the city.</label
                 >
                 <input
                   id="name"
@@ -274,11 +282,11 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Where do you intend to study? Name the country and the city."
                   autofocus
                 /> 
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Preferred course</label
                 >
                 <input
                   id="name"
@@ -286,11 +294,12 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Preferred course"
                   autofocus
                 /> 
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >Preferred Uni or College
+                  </label
                 >
                 <input
                   id="name"
@@ -298,26 +307,28 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="Preferred Uni or College
+                  "
                   autofocus
                 />
                 <h1>DECLARATION & AGREEMENT</h1>
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >I declare that the information above is correct.                   </label
                 >
                 <select>
-                    <option>So many options</option>
-                    <option>...</option>
+                    <option>Yes</option>
+                    <option>No</option>
                 </select>
                 <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >TEC Group can use my contact for future updates.</label
                 >
                 <select>
-                    <option>So many options</option>
-                    <option>...</option>
+                    <option>Yes</option>
+                    <option>No</option>
                 </select>
                 <label for="name" class="-form-label font-weight-bold"
-                >Name</label
+                >I would like to consult the counsellor on
+                </label
               >
               <input
                 id="date"
@@ -329,7 +340,7 @@
                 autofocus
               />
               <label for="name" class="-form-label font-weight-bold"
-                  >Name</label
+                  >How did you hear about us?                  </label
                 >
                 <input
                   id="name"
@@ -337,7 +348,7 @@
                   class="@error('name') is-invalid @enderror"
                   name="name"
                   autocomplete="name"
-                  placeholder="Your Name"
+                  placeholder="How did you hear about us?                   "
                   autofocus
                 />
 
