--- a/service.html
+++ b/service.html
@@ -117,6 +117,7 @@
               <div class="row">
                   <!-- feaure box -->
                   <div class="col-sm-6 col-lg-4">
+                    <a href="./serviceDetail.html">
                       <div class="feature-box-1">
                           <div class="icon">
                             <i class="fa fa-users" aria-hidden="true"></i>
@@ -126,6 +127,7 @@
                               <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                           </div>
                       </div>
+                    </a>
                   </div>
                   <!-- / -->
                   <!-- feaure box -->
@@ -224,10 +226,10 @@
                   <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
               </div>
           </div>
+        </div>
       </div>
-              </div>
-          </div>
-        </section>
+    </div>
+  </section>
         <section>
           <div class="container">
           <h1 class="expert-title">Courses</h1>
