making about message from ceo responsive

--- a/mesagefromceo.html
+++ b/mesagefromceo.html
@@ -116,7 +116,8 @@
                 </div>
             </div>
         </div> -->
-        <div class="about-founder">
+        <section id="desktop-view">
+          <div class="about-founder">
             <div class="container">
                 <div class="row">
                     <h1>Message From CEO</h1>
@@ -137,6 +138,32 @@
                 </div>
         </div>
     </div>
+        </section>
+        
+    <section id="mobile-view">
+      <div class="about-founder">
+        <div class="container">
+            <div class="row">
+                <h1>Message From CEO</h1>
+                <div class="col-sm">
+                  <img src="./img/img4.jpg" alt="" class="president-img" width="100%">
+                 </div>
+                <div class="col-sm">
+                    <p class="president-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione id, sequi libero enim illo perferendis perspiciatis quae laudantium nemo voluptatum non repudiandae impedit nostrum fugiat voluptas maiores iste dolorem pariatur!
+                    </p>
+                    <p class="president-description-sub">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex reiciendis suscipit eaque doloribus reprehenderit officiis amet aperiam delectus veritatis, enim placeat, dolorum quis ea fugit fugiat sit dolorem repellat.
+                    </p>
+                    <p class="president-description-sub">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda.
+                    </p>
+                </div>
+            </div>
+    </div>
+  </div>
+    </section>
+    
     <div class="about-experts id="bg-color">
       <div class="container">
             <div class="expert-title">
