making course enroll responsive

--- a/enroll.html
+++ b/enroll.html
@@ -96,7 +96,7 @@
       <div class="container">
         <div class="title">
           <h1>Contact Form</h1>
-          <p class="right-styled-para">Contact us from here</p>
+          <p class="right-styled-para">Course Enroll Details</p>
         </div>
         <div class="contact_us">
           <div class="contact-input">
@@ -226,10 +226,6 @@
                   placeholder="Type Something..."
                 ></textarea>
               </div> -->
-                <div class="send_message">
-                <button class="btn btn-outline-primary">Send Message</button>
-              </div>
-            </form>
           </div>
           <div class="contact-information">
             <div class="Contact-input_area">
@@ -351,8 +347,11 @@
                   placeholder="How did you hear about us?                   "
                   autofocus
                 />
-
+            <div class="send_message">
+              <button class="btn btn-outline-primary">Send Message</button>
             </div>
+          </form>
+          </div>
           </div>
         </div>
       </div>
