Adding Extra page in about us in the name of Message from director

--- a/messagefromdirector.html
+++ b/messagefromdirector.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/nav_footer.css">
-    <link rel="stylesheet" href="./css/about.style.css">
+    <link rel="stylesheet" href="./css/messagefromceo.css">
 
     <title>Embassy</title>
 </head>
@@ -96,14 +96,14 @@
             height:70vh;
             filter: brightness(55%);
             "> </div>
-            <h1 class="hero-img-title">About Us</h1>
+            <h1 class="hero-img-title">Message From Director</h1>
     </div>
     <section>
-        <div class="about-company">
+        <!-- <div class="about-company">
             <div class="container">
                 <div class="about-section" >
                     <div class="inner-container">
-                        <h1>About Company</h1>
+                        <h1>Message From CEO</h1>
                         <p class="text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
                         </p>
@@ -116,11 +116,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="about-founder">
+        </div> -->
+        <section id="desktop-view">
+          <div class="about-founder">
             <div class="container">
                 <div class="row">
-                    <h1>About President KB Shrestha</h1>
+                    <h1>Message From Director</h1>
                     <div class="col-sm">
                         <p class="president-description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione id, sequi libero enim illo perferendis perspiciatis quae laudantium nemo voluptatum non repudiandae impedit nostrum fugiat voluptas maiores iste dolorem pariatur!
@@ -133,11 +134,37 @@
                         </p>
                     </div>
                     <div class="col-sm">
-                        <img src="./img/img2.jpg" alt="" class="president-img" width="100%">
+                        <img src="./img/img4.jpg" alt="" class="president-img" width="100%">
                     </div>
                 </div>
         </div>
-    </div> -->
+    </div>
+        </section>
+        
+    <section id="mobile-view">
+      <div class="about-founder">
+        <div class="container">
+            <div class="row">
+                <h1>Message From Director</h1>
+                <div class="col-sm">
+                  <img src="./img/img4.jpg" alt="" class="president-img" width="100%">
+                 </div>
+                <div class="col-sm">
+                    <p class="president-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione id, sequi libero enim illo perferendis perspiciatis quae laudantium nemo voluptatum non repudiandae impedit nostrum fugiat voluptas maiores iste dolorem pariatur!
+                    </p>
+                    <p class="president-description-sub">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex reiciendis suscipit eaque doloribus reprehenderit officiis amet aperiam delectus veritatis, enim placeat, dolorum quis ea fugit fugiat sit dolorem repellat.
+                    </p>
+                    <p class="president-description-sub">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda.
+                    </p>
+                </div>
+            </div>
+    </div>
+  </div>
+    </section>
+    
     <div class="about-experts id="bg-color">
       <div class="container">
             <div class="expert-title">
@@ -177,7 +204,7 @@
                 Book Free Counselling
               </h1>
               <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
-              <a href=""><button class="book-a-session">Book a Session</button></a>
+              <button class="book-a-session">Book a Session</button>
               <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
             </div>
           </div>
