--- a/ourteam.html
+++ b/ourteam.html
@@ -37,6 +37,7 @@
                     <li><a class="dropdown-item" href="./about.html">About Company</a></li>
                     <li><a class="dropdown-item" href="./mesagefromceo.html">Meet Our Team</a></li>
                     <li><a class="dropdown-item" href="./mesagefromceo.html">Message From CEO</a></li>
+                    <li><a class="dropdown-item" href="./messagefromdirector.html">Message From Director</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
