--- a/index.html
+++ b/index.html
@@ -166,8 +166,10 @@
             </div>
         </div>
         <div class="row">
-            <!-- feaure box -->
-            <div class="col-sm-6 col-lg-4">
+            <!-- feaureox -->
+    
+              <div class="col-sm-6 col-lg-4">
+                <a href="#">
                 <div class="feature-box-1">
                     <div class="icon">
                       <i class="fa fa-users" aria-hidden="true"></i>
@@ -177,7 +179,9 @@
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
+                </a>
             </div>
+         
             <!-- / -->
             <!-- feaure box -->
             <div class="col-sm-6 col-lg-4">
