--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
     </nav>
   </header>
 
+  <section>
+    <div id="modalOverlay">
+      <div class="modalPopup">
+        <div class="modalContent">
+          <button class="buttonStyle" id="button">X</button>
+            <h4 class="popup-heading">TEC GROUP</h4>
+                      <img src="./img/popup.jpg" alt="pop message" width="100%" class="popup-message">
+             <a href="#" class="pop-up__button">Contact US</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -468,5 +481,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/pop.js"></script>
 </body>
 </html>
